# lunarica

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README.md
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/commands/auth/: auth_commands.h
src/commands/body/: body_commands.h
src/commands/headers/: header_commands.h
src/commands/misc/: misc_commands.h
src/commands/network/: http_commands.h
src/commands/query/: query_commands.h
src/commands/system/: cd_command.h  exit_command.h  help_command.h
src/core/: application.cpp  application.h  command.h  command_processor.cpp  command_processor.h  command_registry.cpp  command_registry.h  context.cpp  context.h
src/services/: http_service.cpp  http_service.h  json_formatter.cpp  json_formatter.h
src/utils/: encoding_utils.h
tests/core/: auth.cpp  cmd.cpp  context.cpp  encoding.cpp  http_service.cpp
tests/utils/: test_http_server.h
